--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=api-products
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/products
+spring.datasource.url=jdbc:postgresql://localhost:5432/products-api
 spring.datasource.username=postgres
 spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
