--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/products-api
 spring.datasource.username=postgres
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+api.security.token.secret=${JWT_SECRET:my-secret-key}
